--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f6f6f6;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 code {
